deploy/apigateaway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apigateawayservice
  name: apigateawayservice
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateawayservice
  template:
    metadata:
      labels:
        app: apigateawayservice
spec:
      containers:
      - image: registry.gitlab.com/fajb420/otr-prototype/apigateawayservice:latest
        imagePullPolicy: Always
        name: service
        ports:
        - containerPort: 4444
          name: service
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
apiVersion: v1
kind: Service
metadata:
  name: apigateawayservice
  labels:
    app: apigateawayservice
spec:
  type: ClusterIP
  ports:
- port: 4444
      targetPort: 4444
      protocol: TCP
      name: http
  selector:
    app: apigateawayservice
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apigateawayservice
  labels:
    app: apigateawayservice
spec:
#  ingressClassName: "public"
  rules:
  - http:
      paths:
      - backend:
          serviceName: apigateawayservice
          servicePort: http
        path: /
