deploy/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: clientservice
  name: clientservice
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientservice
  template:
    metadata:
      labels:
        app: clientservice
    spec:
      containers:
      - image: registry.gitlab.com/fajb420/otr-prototype/clientsservice:latest
        imagePullPolicy: Always
        name: service
        ports:
        - containerPort: 5555
          name: service
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: clientservice
  labels:
    app: clientservice
spec:
  type: ClusterIP
  ports:
    - port: 5555
      targetPort: 5555
      protocol: TCP
      name: http
  selector:
    app: clientservice
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: clientservice
  labels:
    app: clientservice
spec:
#  ingressClassName: "public"
  rules:
  - http:
      paths:
      - backend:
          serviceName: clientservice
          servicePort: http
        path: /
