deploy/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: front
  name: front
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - image: registry.gitlab.com/fajb420/otr-prototype/front:latest
        imagePullPolicy: Always
        name: service
        ports:
        - containerPort: 80
          name: service
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: front
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: front
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front
  labels:
    app: front
spec:
  ingressClassName: "public"
  rules:
  - http:
      paths:
      - backend:
          serviceName: front
          servicePort: http
        path: /
        pathType: Prefix
