deploy/whoami.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami:v1.4.0
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: whoami
  selector:
    app: whoami
---
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
  labels:
    app: whoami
spec:
#  ingressClassName: "public"
  rules:
  - http:
      paths:
      - backend:
          serviceName: whoami
          servicePort: whoami
#        path: /(camunda)(.*)(/|$)
        path: /
        pathType: Prefix
